# opentelemtry-rust-setup

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs  open_telemetry.rs
